initial app code done

--- a/Research/testastra.ipynb
+++ b/Research/testastra.ipynb
@@ -1149,13 +1149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.helper import llm_model\n",
     "api_key=os.getenv('GROQ_API_KEY')\n",
-    "llm=llm_model(api_key)"
+    "llm=llm_model(api_key,0)"
    ]
   },
   {
